--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "cryptr": "^6.3.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
